Added the swaager API.
