# routes/index.js
@@ -1,10 +1,14 @@
 const router = require("express").Router();
-const controller = require("../controllers/functions");
-const indexRouter = require("./routes")
 
-router.get("/", indexRouter);
-router.get("/team", controller.getAll);
-router.get("/:id", controller.getByid);
-router.post("/createMember", controller.createMember);
+router.use("/", require("./swagger"));
+
+router.get("/", (req, res) => {
+  //#swagger.tags=["Ball Players"]
+  res.send(
+    "<center><h1 style='color:crimson; padding-top: 15rem; font-size:6rem'>This is the CSE 341 Ball Players Project Home Page: Part-2</h1></center>"
+  );
+});
+
+router.use("/players", require("./routes"));
 
 module.exports = router;
